[gd_scene load_steps=4 format=2]

[ext_resource path="res://PlayerUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://Battle.gd" type="Script" id=2]
[ext_resource path="res://Requests.tscn" type="PackedScene" id=3]

[node name="Battle" type="Control"]
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="player1" parent="." instance=ExtResource( 1 )]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 240.0
margin_top = 448.0
margin_right = 240.0
margin_bottom = 448.0

[node name="player2" parent="." instance=ExtResource( 1 )]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 240.0
margin_right = 240.0
margin_bottom = 0.0

[node name="Requests" parent="." instance=ExtResource( 3 )]

[node name="Button" type="Button" parent="."]
margin_left = 1344.0
margin_top = 64.0
margin_right = 1856.0
margin_bottom = 576.0
text = "Next Round"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]

[editable path="player1"]
[editable path="player1/Deck"]
